added some links; reworked some text

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </style>
 </head>
 <body>
-
-Last updated: <span id="update"></span>
+<div><a href="https://github.com/rdmurphy/leaflet-custom-maki-demo">View on GitHub</a></div><br>
+<div>Reservoir data last updated: <span id="update"></span></div>
 <div id="map-canvas"></div>
 
 </body>
